# controlled_annealing

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: doublewell.py
ideanneal/: __init__.py  langevin.py  pdmp.py  transport.py  util.py
paper/: .gitignore  common.py
paper/doublewell/: .gitignore  convergence.py  doublewell.py  heatmaps.py  hist.py  mpi.py  w2v.py
paper/optim/: .gitignore  optim.py  rastrigin.py  rosenbrock.py
tests/: conftest.py  erg_test.py  langevin_test.py  pdmp_test.py  transport_test.py
